add some category and brand routes for product service
