# be/product-service/src/api/routes/index.js
@@ -1,7 +1,8 @@
 const express = require("express");
 const router = express.Router();
 
-router.use("/", require("./product.route"));
 router.use("/categories", require("./category.route"));
+router.use("/brands", require("./brand.route"));
+router.use("/", require("./product.route"));
 
 module.exports = router;
